# home-assistant-watcher

./: LICENSE  README.md  pyproject.toml
configuration/: watcher.yaml
src/home_assistant_watcher/: __init__.py  api.py  data.py  main.py  mqtt_client.py  mqtt_publisher.py  watcher.py
